# finite-lengths-bounds

./: .gitignore  code_distance_spectrum.numbers
cpp/config/: k11n30v6.yaml
python/: CMakeLists.txt  compile.sh  cu_dsu.py  kernel.cu  main.py  setup.py  step.py  step_numba.py  trellisStep.py  trellisStep_Wbit_test.py  trellisStep_foldshift_test.py  trellisStep_metaStage_test.py  trellisStep_sharedMem_test.py  trellisStep_test.py
python/config/: k113n254v8.yaml  k11n22v3.yaml  k11n30v6.yaml  k15n30v6.yaml  k21n62v6.yaml  k31n62v6.yaml  k51n126v6.yaml  k51n126v8.yaml
python/lib/: kernel.cu
python/output/: DistanceSpec_V6m4K11CRC10011.npy  convertExcel.py  k15n30v6_dist_spectrum.xlsx  k21n62v6_dist_spectrum.xlsx  k21n62v6_ds.xlsx  k51n126v6_dist_spectrum.xlsx  k51n126v8_dist_spectrum.xlsx
python/output/fold/: k15n30v6_dist_spectrum.npy  k21n62v6_dist_spectrum.npy  k51n126v6_dist_spectrum.npy  k51n126v8_dist_spectrum.npy
